Replace new Long by Long.valueOf.
Signed-off-by: Achim Kraus <achim.kraus@cloudcoap.net>